--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -1525,7 +1525,7 @@ body {
 
 @media (max-width: 375px) {
   html {
-    font-size: 35%;
+    font-size: 30%;
   }
 
   body {
@@ -1534,6 +1534,15 @@ body {
         left: 12rem;
       }
     }
+
+    .Home {
+      .home-content {
+        p {
+          font-size: 2rem;
+        }
+      }
+    }
+
     .About {
       padding-left: 4%;
       padding-right: 4%;
@@ -1544,7 +1553,7 @@ body {
             max-width: 100rem;
 
             .card-text {
-              font-size: 2rem;
+              font-size: 2.1rem;
             }
           }
         }
@@ -1554,12 +1563,15 @@ body {
 }
 
 @media (max-width: 320px) {
+
+
   body {
     .header {
       #leng {
         left: 10rem;
       }
     }
+    
 
     .About {
       padding-left: 6%;
