--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -11,6 +11,11 @@ $main-color: #00b7ff;
 $bg-degradado: linear-gradient(to top, $bg-primary, black);
 $Animation1: Dtop 1.5s ease-in-out;
 
+$bg-navbar-light: #248eff;
+$bg-primary-light: hsl(208, 100%, 63%); 
+$bg-secundary-light: #ffffff;
+
+
 * {
   margin: 0;
   padding: 0;
